Added string resources for titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <string name="public_key">63c845f07f40335b0a40a3942bcc5ca8</string>
     <string name="private_key">0dba2430609a6e2aaa8c2f07997a6be68c331ba9</string>
+    <string name="comics_title">Participações em Quadrinhos</string>
+    <string name="main_title">Lista de Heróis</string>
 </resources>
